# skeletontracker_nu

./: .gitignore  CMakeLists.txt  README  default.vcg  kinectconfig.xml  manifest.xml  package.xml  record_skeletons.sh  start_system.sh
launch/: get_video_frames.launch  nu_skeletontracker.launch  nutracker.launch  record_skeletons.launch  skeletonrecord.vcg  skeletonrecord_orig.vcg
src/: SceneDrawer.test1.cpp  main.cpp.original  main.test1.cpp  nu_skeletontracker.cpp  nu_skeletontracker.cpp.newbackup  openni_tracker.test1.cpp  skeletontracker_nu.cpp
